--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
     <!-- Icon -->
@@ -36,7 +38,7 @@
     <!-- Navbar for desktop -->
     <nav class="navbar fixed-top bg-white shadow-sm rounded navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand d-flex justify-content-between" href="index.html">
                 <img src="resources/images/logo.png" alt="" width="24" height="24"
                     class="d-inline-block align-text-top">
                 OBG
@@ -102,10 +104,11 @@
                             <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32"
                                 class="rounded-circle">
                         </a>
-                        <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
+                        <ul class="dropdown-menu text-small shadow border-0">
                             <li><a class="dropdown-item" href="profile.html">Profile</a></li>
-                            <li><a class="dropdown-item" href="orders.html">My orders</a></li>
-                            <li><a class="dropdown-item" href="#">My Timeline</a></li>
+                            <li><a class="dropdown-item" href="orders.html">Orders</a></li>
+                            <li><a class="dropdown-item" href="deal.html">Deal</a></li>
+                            <li><a class="dropdown-item" href="items.html">My items</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -158,12 +161,12 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="btn me-4">
+                <a href="cart.html" class="btn me-4">
                     <i class="fas fa-shopping-cart"></i>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="d-block link-dark text-decoration-none">
+                <a href="profile.html" class="d-block link-dark text-decoration-none">
                     <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
                 </a>
             </li>
@@ -1150,25 +1153,6 @@
         });
     </script>
     <!-- End Loading -->
-
-    <!-- Back to top -->
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-            class="bi bi-arrow-up-short"></i></a>
-    <script>
-        let backtotop = select('.back-to-top')
-        if (backtotop) {
-            const toggleBacktotop = () => {
-                if (window.scrollY > 100) {
-                    backtotop.classList.add('active')
-                } else {
-                    backtotop.classList.remove('active')
-                }
-            }
-            window.addEventListener('load', toggleBacktotop)
-            onscroll(document, toggleBacktotop)
-        }
-    </script>
-    <!-- End Back to top -->
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
