--- a/profile.html
+++ b/profile.html
@@ -80,8 +80,9 @@
                         </a>
                         <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
                             <li><a class="dropdown-item" href="profile.html">Profile</a></li>
-                            <li><a class="dropdown-item" href="orders.html">My orders</a></li>
-                            <li><a class="dropdown-item" href="#">My Timeline</a></li>
+                            <li><a class="dropdown-item" href="orders.html">Orders</a></li>
+                            <li><a class="dropdown-item" href="deal.html">Deal</a></li>
+                            <li><a class="dropdown-item" href="items.html">My items</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -133,7 +134,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="btn btn-nav me-4">
+                <a href="cart.html" class="btn btn-nav me-4">
                     <i class="fas fa-shopping-cart"></i>
                 </a>
             </li>
