--- a/post.html
+++ b/post.html
@@ -254,7 +254,59 @@
 
                             <div class="col-sm-12">
                                 <!-- Code in here -->
-                                
+                                <div class="file-upload">
+                                    <button class="file-upload-btn" type="button"
+                                        onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
+
+                                    <div class="image-upload-wrap">
+                                        <input class="file-upload-input" type='file' onchange="readURL(this);"
+                                            accept="image/*" />
+                                        <div class="drag-text">
+                                            <h3>Drag and drop a file or select add Image</h3>
+                                        </div>
+                                    </div>
+                                    <div class="file-upload-content">
+                                        <img class="file-upload-image" src="#" alt="your image" />
+                                        <div class="image-title-wrap">
+                                            <button type="button" onclick="removeUpload()" class="remove-image">Remove
+                                                <span class="image-title">Uploaded Image</span></button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <script>
+                                    function readURL(input) {
+                                        if (input.files && input.files[0]) {
+
+                                            var reader = new FileReader();
+
+                                            reader.onload = function (e) {
+                                                $('.image-upload-wrap').hide();
+
+                                                $('.file-upload-image').attr('src', e.target.result);
+                                                $('.file-upload-content').show();
+
+                                                $('.image-title').html(input.files[0].name);
+                                            };
+
+                                            reader.readAsDataURL(input.files[0]);
+
+                                        } else {
+                                            removeUpload();
+                                        }
+                                    }
+
+                                    function removeUpload() {
+                                        $('.file-upload-input').replaceWith($('.file-upload-input').clone());
+                                        $('.file-upload-content').hide();
+                                        $('.image-upload-wrap').show();
+                                    }
+                                    $('.image-upload-wrap').bind('dragover', function () {
+                                        $('.image-upload-wrap').addClass('image-dropping');
+                                    });
+                                    $('.image-upload-wrap').bind('dragleave', function () {
+                                        $('.image-upload-wrap').removeClass('image-dropping');
+                                    });
+                                </script>
                                 <!-- Code in here -->
                             </div>
 
@@ -269,11 +321,11 @@
                             <div class="form-check form-switch">
                                 <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
                                 <label class="form-check-label" for="flexSwitchCheckDefault">Exchange</label>
-                              </div>
-                              <div class="form-check form-switch">
+                            </div>
+                            <div class="form-check form-switch">
                                 <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked>
                                 <label class="form-check-label" for="flexSwitchCheckChecked">Sale</label>
-                              </div>
+                            </div>
                         </div>
 
                         <div class="row gy-3">
@@ -284,7 +336,6 @@
                                     Valid price is required
                                 </div>
                             </div>
-
                             <a class="w-100 text-center btn-edit btn-lg" type="submit">Confirm</a>
                     </form>
                 </div>
