--- a/profile.html
+++ b/profile.html
@@ -135,7 +135,7 @@
             </li>
             <li class="nav-item">
                 <a href="cart.html" class="btn btn-nav me-4">
-                    <i class="fas fa-shopping-cart"></i>
+                    <i class="fas fa-shopping-cart"></i>s
                 </a>
             </li>
             <li class="nav-item">
@@ -249,6 +249,35 @@
                         <div class="col-lg-4">
                             <label for="zip" class="form-label">Zip</label>
                             <input type="text" class="form-control form-control-input" id="zip" placeholder="ZIP">
+                        </div>
+                    </div>
+
+                    <h5 class="mt-4">Social Network</h5>
+                    <div class="row mb-2">
+                        <div class="col-lg-4">
+                            <a class="btn-share btn-twitter me-2 my-2" href="#"><i
+                                class="fab fa-twitter"></i> Twitter</a>
+                        </div>
+                        <div class="col-lg-8">
+                            <input type="text" class="form-control form-control-input" id="zip" placeholder="https://twitter.com/">
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-lg-4">
+                            <a class="btn-share btn-instagram me-2 my-2" href="#"><i
+                                class="fab fa-instagram"></i> Instagram</a>
+                        </div>
+                        <div class="col-lg-8">
+                            <input type="text" class="form-control form-control-input" id="zip" placeholder="https://www.instagram.com/">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <a class="btn-share btn-facebook my-2" href="#"><i
+                                class="fab fa-facebook"></i> Facebook</a>
+                        </div>
+                        <div class="col-lg-8">
+                            <input type="text" class="form-control form-control-input" id="zip" placeholder="https://www.facebook.com/">
                         </div>
                     </div>
                     <button class="mt-2 btn btn-save">Save All</button>
