--- a/charity.html
+++ b/charity.html
@@ -112,8 +112,8 @@
     <!-- End Navbar for desktop-->
 
     <!-- Navbar for mobile -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger fixed-bottom justify-content-center">
-        <ul class="nav for-mobile">
+    <nav class="navbar navbar-expand-lg navbar-light bg-danger fixed-bottom justify-content-center for-mobile">
+        <ul class="nav">
             <li class="nav-item">
                 <button class="btn me-4" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight-mobile">
                     <i class="far fa-bell"></i>
