--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32"
                                 class="rounded-circle">
                         </a>
-                        <ul class="dropdown-menu text-small shadow border-0">
+                        <ul class="dropdown-menu text-small shadow border-0 p-3">
                             <li><a class="dropdown-item" href="profile.html">Profile</a></li>
                             <li><a class="dropdown-item" href="orders.html">Orders</a></li>
                             <li><a class="dropdown-item" href="deal.html">Deal</a></li>
@@ -195,7 +195,6 @@
             var toastElement = new bootstrap.Toast(toastHTMLElement, option);
             toastElement.show();
         }
-
     </script>
 
     <!-- Hero -->
@@ -1142,17 +1141,6 @@
         </div>
     </footer>
     <!-- End Footer -->
-
-    <!-- Loading -->
-    <div class="loader-wrapper">
-        <span class="loader"><span class="loader-inner"></span></span>
-    </div>
-    <script>
-        $(window).on("load", function () {
-            $(".loader-wrapper").fadeOut("slow");
-        });
-    </script>
-    <!-- End Loading -->
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
