--- a/orders.html
+++ b/orders.html
@@ -7,12 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
     <!-- CSS -->
     <link rel="stylesheet" href="orders.css">
@@ -20,9 +18,7 @@
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <!-- Icon -->
     <link rel="icon" href="resources/images/logo.png">
@@ -39,9 +35,7 @@
     <nav class="navbar fixed-top bg-white shadow-sm rounded navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="resources/images/logo.png" alt="" width="24" height="24"
-                    class="d-inline-block align-text-top">
-                OBG
+                <img src="resources/images/logo.png" alt="" width="24" height="24" class="d-inline-block align-text-top"> OBG
             </a>
             <form class="d-flex w-50">
                 <input type="text" class="form-control search-box" placeholder="Search...">
@@ -60,8 +54,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="post.html" class="btn btn-nav me-2">
-                        <i class="far fa-clipboard" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            title="Post"></i>
+                        <i class="far fa-clipboard" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Post"></i>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -71,16 +64,13 @@
                 </li>
                 <li class="nav-item">
                     <a href="cart.html" class="btn btn-nav me-5">
-                        <i class="fas fa-shopping-cart" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            title="Cart"></i>
+                        <i class="fas fa-shopping-cart" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Cart"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <div class="flex-shrink-0 dropdown mt-2">
-                        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32"
-                                class="rounded-circle">
+                        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
                         </a>
                         <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
                             <li><a class="dropdown-item" href="profile.html">Profile</a></li>
@@ -151,23 +141,21 @@
     </nav>
     <!-- End Navbar for mobile -->
 
-    <!-- Tracking --> 
+    <!-- Tracking -->
     <div class="mt-3">_</div>
     <div class="container mt-5 mb-5">
-        <div class="row"> 
+        <div class="row">
             <div class="col-lg-4 shadow-sm bg-white rounded-3 h-50">
                 <div class="avatar">
                     <div class="d-flex justify-content-center">
-                        <img src="https://github.com/mdo.png" alt="avatar" width="120" height="120"
-                            class="rounded-circle">
+                        <img src="https://github.com/mdo.png" alt="avatar" width="120" height="120" class="rounded-circle">
                     </div>
                     <h4 class="text-center">William Tom</h4>
                 </div>
                 <div class="list">
                     <ul class="list-group p-4">
                         <li class="border-top-0 border-start-0 border-end-0 list-group-item ">
-                            <a href="profile.html"
-                                class="text-decoration-none d-flex justify-content-between align-items-center text-dark">
+                            <a href="profile.html" class="text-decoration-none d-flex justify-content-between align-items-center text-dark">
                                 Profile <i class="fas fa-arrow-right"></i>
                             </a>
                         </li>
@@ -192,6 +180,7 @@
             <div class="col-lg-1"></div>
             <div class="col-lg-7  rounded-3">
                 <div class="item border bg-white">
+
                     <div class="row m-3 item-header">
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">ORDER NO:</span> <br>
@@ -210,13 +199,21 @@
                             <span class="tracking-content">$259.00</span>
                         </div>
                     </div>
+
                     <div class="row item-body m-3">
-                        <div class="col-lg-6 d-flex justify-content-center">
+                        <div class="col-lg-5 d-flex justify-content-center">
                             <img src="resources/images/fashion/fashion6-1.jpg" width="100" height="100" alt="" class="me-2">
                             <img src="resources/images/fashion/fashion7-1.jpg" width="100" height="100" alt="">
                         </div>
-                        <div class="col-lg-6 d-flex justify-content-center align-items-center mt-2">
+                        <div class="col-lg-5 d-flex justify-content-center align-items-center mt-2">
                             <a href="orders/order1.html" class="btn btn-order-details">Order Details</a>
+                        </div>
+                        <div class="col-lg-2">
+                            <div class="row">
+                                <div class="d-flex justify-content-end position-relative top-0 start-0">
+                                    <p class="fs-6 fw-bold text-danger badge bg-soft-danger"><i class="fas fa-tag"></i> Sale</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -237,15 +234,22 @@
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">ORDER AMOUNT:</span> <br>
-                            <span class="tracking-content">$75.00</span>
+                            <span class="tracking-content">$00.00</span>
                         </div>
                     </div>
                     <div class="row item-body m-3">
-                        <div class="col-lg-6 d-flex justify-content-center">
+                        <div class="col-lg-5 d-flex justify-content-center">
                             <img src="resources/images/fashion/fashion10-1.jpg" width="100" height="100" alt="">
                         </div>
-                        <div class="col-lg-6 d-flex justify-content-center align-items-center mt-2">
-                            <a href="#" class="btn btn-order-details">Order Details</a>
+                        <div class="col-lg-5 d-flex justify-content-center align-items-center mt-2">
+                            <a href="orders/order2.html" class="btn btn-order-details">Order Details</a>
+                        </div>
+                        <div class="col-lg-2">
+                            <div class="row">
+                                <div class="d-flex justify-content-end position-relative top-0 start-0">
+                                    <p class="fs-6 fw-bold text-success badge bg-soft-success"><i class="fas fa-tag"></i> Exchange</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -269,13 +273,20 @@
                         </div>
                     </div>
                     <div class="row item-body m-3">
-                        <div class="col-lg-6 d-flex justify-content-center">
+                        <div class="col-lg-5 d-flex justify-content-center">
                             <img src="resources/images/electronic/electronic8-1.jpg" width="100" height="100" alt="" class="me-2">
                             <img src="resources/images/electronic/electronic7-1.jpg" width="100" height="100" alt="" class="me-2">
                             <a href="#" class="btn btn-more d-flex justify-content-center align-items-center">+1 <br> more</a>
                         </div>
-                        <div class="col-lg-6 d-flex justify-content-center align-items-center mt-2">
+                        <div class="col-lg-5 d-flex justify-content-center align-items-center mt-2">
                             <a href="#" class="btn btn-order-details">Order Details</a>
+                        </div>
+                        <div class="col-lg-2">
+                            <div class="row">
+                                <div class="d-flex justify-content-end position-relative top-0 start-0">
+                                    <p class="fs-6 fw-bold text-danger badge bg-soft-danger"><i class="fas fa-tag"></i> Sale</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -293,10 +304,8 @@
                         <a href="index.html" class="logo d-flex align-items-center">
                             <span> About OBG</span>
                         </a>
-                        <p>OBG is a marketplace where people can purchase, sell, swap, and donate unwanted products. All
-                            you have to do is provide us with some details and photos about the item you no longer need,
-                            and we'll take care of the rest. Our goal is to encourage people to live a more frugal
-                            lifestyle and to minimize waste as much as possible.</p>
+                        <p>OBG is a marketplace where people can purchase, sell, swap, and donate unwanted products. All you have to do is provide us with some details and photos about the item you no longer need, and we'll take care of the rest. Our goal
+                            is to encourage people to live a more frugal lifestyle and to minimize waste as much as possible.</p>
                         <div class="social-links mt-3">
                             <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
                             <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
@@ -319,9 +328,7 @@
                     <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
                         <h4>Contact Us</h4>
                         <p>
-                            470 Tran Dai Nghia<br>
-                            Ngu Hanh Son, Da Nang<br>
-                            Viet Nam<br><br>
+                            470 Tran Dai Nghia<br> Ngu Hanh Son, Da Nang<br> Viet Nam<br><br>
                             <strong>Phone:</strong> 18006789<br>
                             <strong>Email:</strong> obg@gmail.com<br>
                         </p>
@@ -344,13 +351,11 @@
     <!-- End Footer -->
 
     <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- Tooltip -->
     <script>
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+        var tooltipList = tooltipTriggerList.map(function(tooltipTriggerEl) {
             return new bootstrap.Tooltip(tooltipTriggerEl)
         })
     </script>
