--- a/profile.html
+++ b/profile.html
@@ -7,25 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <title>Hello, Tom!</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="profile.css">
-
+    <link rel="stylesheet" href="resources/css/profile.css">
     <link rel="icon" href="resources/images/logo.png">
 </head>
 
@@ -34,10 +29,8 @@
     <!-- Navbar for desktop -->
     <nav class="navbar fixed-top bg-white shadow-sm rounded navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="resources/images/logo.png" alt="" width="24" height="24"
-                    class="d-inline-block align-text-top">
-                OBG
+            <a class="navbar-brand d-flex justify-content-between" href="index.html">
+                <img src="resources/images/logo.png" alt="" width="24" height="24" class="d-inline-block align-text-top"> OBG
             </a>
             <form class="d-flex w-50">
                 <input type="text" class="form-control search-box" placeholder="Search...">
@@ -56,8 +49,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="post.html" class="btn btn-nav me-2">
-                        <i class="far fa-clipboard" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            title="Post"></i>
+                        <i class="far fa-clipboard" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Post"></i>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -67,18 +59,15 @@
                 </li>
                 <li class="nav-item">
                     <a href="cart.html" class="btn btn-nav me-5">
-                        <i class="fas fa-shopping-cart" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            title="Cart"></i>
+                        <i class="fas fa-shopping-cart" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Cart"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <div class="flex-shrink-0 dropdown mt-2">
-                        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32"
-                                class="rounded-circle">
+                        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
                         </a>
-                        <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
+                        <ul class="dropdown-menu text-small shadow border-0 p-3">
                             <li><a class="dropdown-item" href="profile.html">Profile</a></li>
                             <li><a class="dropdown-item" href="orders.html">Orders</a></li>
                             <li><a class="dropdown-item" href="deal.html">Deal</a></li>
@@ -135,7 +124,7 @@
             </li>
             <li class="nav-item">
                 <a href="cart.html" class="btn btn-nav me-4">
-                    <i class="fas fa-shopping-cart"></i>s
+                    <i class="fas fa-shopping-cart"></i>
                 </a>
             </li>
             <li class="nav-item">
@@ -149,20 +138,18 @@
     <div class="mt-3">-</div>
     <!-- Information -->
     <div class="container mt-5 mb-5">
-        <div class="row"> 
-            <div class="col-lg-4 shadow-sm bg-white rounded-3 h-50">
+        <div class="row">
+            <div class="col-lg-4 shadow-sm bg-white rounded-3 h-50 info">
                 <div class="avatar">
                     <div class="d-flex justify-content-center">
-                        <img src="https://github.com/mdo.png" alt="avatar" width="120" height="120"
-                            class="rounded-circle">
+                        <img src="https://github.com/mdo.png" alt="avatar" width="120" height="120" class="rounded-circle">
                     </div>
                     <h4 class="text-center">William Tom</h4>
                 </div>
                 <div class="list">
                     <ul class="list-group p-4">
                         <li class="border-top-0 border-start-0 border-end-0 list-group-item ">
-                            <a href="profile.html"
-                                class="text-decoration-none d-flex justify-content-between align-items-center text-danger">
+                            <a href="profile.html" class="text-decoration-none d-flex justify-content-between align-items-center text-danger">
                                 Profile <i class="fas fa-arrow-right"></i>
                             </a>
                         </li>
@@ -191,13 +178,11 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <label for="firstName" class="form-label">First Name</label>
-                            <input type="text" class="form-control form-control-input" id="firstName"
-                                placeholder="William">
+                            <input type="text" class="form-control form-control-input" id="firstName" placeholder="William">
                         </div>
                         <div class="col-lg-6">
                             <label for="lastName" class="form-label">Last Name</label>
-                            <input type="text" class="form-control form-control-input" id="lastName"
-                                placeholder="Tom">
+                            <input type="text" class="form-control form-control-input" id="lastName" placeholder="Tom">
                         </div>
                     </div>
                     <div class="row mt-3">
@@ -229,14 +214,13 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <label for="address" class="form-label">Address</label>
-                            <input type="text" class="form-control form-control-input" id="address"
-                                placeholder="somewhere">
+                            <input type="text" class="form-control form-control-input" id="address" placeholder="somewhere">
                         </div>
                     </div>
                     <div class="row mt-3">
                         <div class="col-lg-4">
                             <label for="city" class="form-label">City</label>
-                            <input type="text" class="form-control form-control-input" id="city" placeholder="City">
+                            <input type="text" class="form-control form-control-input" id="city" placeholder="Quebec">
                         </div>
                         <div class="col-lg-4">
                             <label for="country" class="form-label">Country</label>
@@ -296,10 +280,8 @@
                         <a href="index.html" class="logo d-flex align-items-center">
                             <span> About OBG</span>
                         </a>
-                        <p>OBG is a marketplace where people can purchase, sell, swap, and donate unwanted products. All
-                            you have to do is provide us with some details and photos about the item you no longer need,
-                            and we'll take care of the rest. Our goal is to encourage people to live a more frugal
-                            lifestyle and to minimize waste as much as possible.</p>
+                        <p>OBG is a marketplace where people can purchase, sell, swap, and donate unwanted products. All you have to do is provide us with some details and photos about the item you no longer need, and we'll take care of the rest. Our goal
+                            is to encourage people to live a more frugal lifestyle and to minimize waste as much as possible.</p>
                         <div class="social-links mt-3">
                             <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
                             <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
@@ -309,22 +291,22 @@
                     </div>
 
                     <div class="col-lg-3 col-md-12 footer-links">
-                        <h4>Categories</h4>
-                        <ul>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Fashion</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Electronics</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Kids' Furniture</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Household</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Vehicle</a></li>
-                        </ul>
+                        <h4 class="text-center">Categories</h4>
+                        <div class="d-flex justify-content-center">
+                            <ul>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/fashion.html">Fashion</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Electronics</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Kids' Furniture</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Household</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Vehicle</a></li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
                         <h4>Contact Us</h4>
                         <p>
-                            470 Tran Dai Nghia<br>
-                            Ngu Hanh Son, Da Nang<br>
-                            Viet Nam<br><br>
+                            470 Tran Dai Nghia<br> Ngu Hanh Son, Da Nang<br> Viet Nam<br><br>
                             <strong>Phone:</strong> 18006789<br>
                             <strong>Email:</strong> obg@gmail.com<br>
                         </p>
@@ -346,13 +328,11 @@
     </footer>
     <!-- End Footer -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <!-- Tooltip -->
     <script>
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+        var tooltipList = tooltipTriggerList.map(function(tooltipTriggerEl) {
             return new bootstrap.Tooltip(tooltipTriggerEl)
         })
     </script>
